--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -73,6 +73,8 @@ jobs:
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+      - name: Install React Canary (for ViewTransition support)
+        run: ${{ steps.detect-package-manager.outputs.manager }} install react@canary react-dom@canary
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build --no-lint
       - name: Upload artifact
